--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       async function run() {
         // Load WebAssembly module
 		//Test1
-        const { Ball } = await import('https://raw.githubusercontent.com/Shbyoun/Shbyoun.github.io/main/./wasm_test.wasm');
+        const { Ball } = await fetch('https://raw.githubusercontent.com/Shbyoun/Shbyoun.github.io/main/wasm_test.wasm');
 
         // Create a new Ball instance
         const ball = new Ball(0, 0, 2, 2);
