--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <script type="module">
       async function run() {
         // Load WebAssembly module
-		//Test1
         const response = await fetch('https://raw.githubusercontent.com/Shbyoun/Shbyoun.github.io/main/wasm_test.wasm');
-		const wasmBytes = await response.arrayBuffer();
-		const wasmModule = await WebAssembly.instantiate(wasmBytes);
-		const { Ball } = wasmModule.instance.exports;
+        const wasmBytes = await response.arrayBuffer();
+        const wasmModule = await WebAssembly.instantiate(wasmBytes);
+
+        // Extract exports from the module
+        const { Ball } = wasmModule.instance.exports;
 
         // Create a new Ball instance
         const ball = new Ball(0, 0, 2, 2);
