--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
     <script type="module">
       async function run() {
-        // Load WebAssembly module
+        // Load WebAssembly module Test1
         const response = await fetch('https://raw.githubusercontent.com/Shbyoun/Shbyoun.github.io/main/wasm_test.wasm');
         const wasmBytes = await response.arrayBuffer();
-        const wasmModule = await WebAssembly.instantiate(wasmBytes);
+		
+        const wasmModule = await WebAssembly.instantiate(wasmBytes,imports);
 
         // Extract exports from the module
         const { Ball } = wasmModule.instance.exports;
