--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 
     <script type="module">
       async function run() {
-        // Load WebAssembly module Test1
-        const response = await fetch('https://raw.githubusercontent.com/Shbyoun/Shbyoun.github.io/main/wasm_test.wasm');
+        // Load WebAssembly module
+        const response = await fetch('https://raw.githubusercontent.com/Shbyoun/Shbyoun.github.io/main/wasm_test.wasm'');
         const wasmBytes = await response.arrayBuffer();
-		
-        const wasmModule = await WebAssembly.instantiate(wasmBytes,imports);
+        const wasmModule = await WebAssembly.instantiate(wasmBytes, {});
 
         // Extract exports from the module
         const { Ball } = wasmModule.instance.exports;
