--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="module">
       async function run() {
         // Load WebAssembly module
-        const response = await fetch('https://raw.githubusercontent.com/Shbyoun/Shbyoun.github.io/main/wasm_test.wasm'');
+        const response = await fetch('https://raw.githubusercontent.com/Shbyoun/Shbyoun.github.io/main/wasm_test.wasm');
         const wasmBytes = await response.arrayBuffer();
         const wasmModule = await WebAssembly.instantiate(wasmBytes, {});
 
